--- a/Makefile.in
+++ b/Makefile.in
@@ -4,9 +4,8 @@
 # $Id: Makefile,v 1.23 2004/05/31 22:04:50 noodles Exp $
 #
 
-CC = gcc
-LINK = gcc
-CFLAGS += -Wall -pedantic -g -I/usr/local/include
+CC = @CC@
+CFLAGS += @CFLAGS@ -Wall -pedantic -g
 # Uncomment to enable profiling.
 #LDFLAGS += -pg
 # Can be "pg" for Postgresql, "file" for flat files or "db2" for pksd db2 style.
@@ -28,37 +27,42 @@ SRCS = armor.c parsekey.c merge.c keyid.c md5.c sha1.c main.c getcgi.c mem.c \
 all: .depend $(PROGS) testparse maxpath sixdegrees splitkeys
 
 splitkeys: splitkeys.o $(CORE_OBJS)
-	$(LINK) -o splitkeys splitkeys.o $(CORE_OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o splitkeys splitkeys.o $(CORE_OBJS) $(LIBS)
 
 testparse: main.o $(OBJS)
-	$(LINK) -o testparse main.o $(OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o testparse main.o $(OBJS) $(LIBS)
 
 maxpath: maxpath.o $(OBJS)
-	$(LINK) -o maxpath maxpath.o $(OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o maxpath maxpath.o $(OBJS) $(LIBS)
 
 sixdegrees: sixdegrees.o $(OBJS)
-	$(LINK) -o sixdegrees sixdegrees.o $(OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o sixdegrees sixdegrees.o $(OBJS) $(LIBS)
 
 gpgwww: gpgwww.o $(OBJS)
-	$(LINK) -o gpgwww gpgwww.o $(OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o gpgwww gpgwww.o $(OBJS) $(LIBS)
 
 lookup: lookup.o cleankey.o merge.o $(CORE_OBJS)
-	$(LINK) -o lookup lookup.o cleankey.o merge.o $(CORE_OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o lookup lookup.o cleankey.o merge.o $(CORE_OBJS) \
+		$(LIBS)
 
 add: add.o cleankey.o merge.o sendsync.o $(CORE_OBJS)
-	$(LINK) -o add add.o cleankey.o merge.o sendsync.o $(CORE_OBJS) $(LIBS)
+	$(CC) $(LDFLAGS) -o add add.o cleankey.o merge.o sendsync.o \
+		$(CORE_OBJS) $(LIBS)
 
 onak: onak.o merge.o cleankey.o $(CORE_OBJS)
-	$(LINK) $(LDFLAGS) -o onak onak.o merge.o cleankey.o $(CORE_OBJS) \
-		$(LIBS)
+	$(CC) $(LDFLAGS) $(LDFLAGS) -o onak onak.o merge.o cleankey.o \
+		$(CORE_OBJS) $(LIBS)
 
 clean:
 	rm -f $(PROGS) $(OBJS) Makefile.bak testparse maxpath *.core core \
 		gpgwww.o add.o lookup.o main.o maxpath.o onak.o sixdegrees \
 		sixdegrees.o splitkeys.o
 
+distclean:
+	rm -f Makefile config.h .depend
+
 .depend: $(SRCS)
-	rm .depend
+	rm -f .depend
 	makedepend -f- -- $(CFLAGS) -- $(SRCS) > .depend
 
 include .depend
