Simple typo fix. Fix Makefile.in distclean target; the removal of .depend had ended up as depend instead so wasn't getting cleaned.

--- a/Makefile.in
+++ b/Makefile.in
@@ -58,7 +58,7 @@ clean:
 		sixdegrees.o splitkeys.o
 
 distclean: clean
-	$(RM) -f Makefile depend config.{log,status,h}
+	$(RM) -f Makefile .depend config.{log,status,h}
 	$(RM) -r autom4te.cache
 
 .depend: $(SRCS)
