Change makedepend to use the compile instead. Change to using the compiler for makedepend instead. This works for GCC; I don't know about other compilers. May need an autoconf test instead in future.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,6 +10,8 @@ LDFLAGS += @LDFLAGS@
 DBTYPE = @DBTYPE@
 #
 LIBS = @LIBS@
+#MAKEDEPEND = makedepend -f- -- 
+MAKEDEPEND = $(CC) -MM
 prefix ?= @prefix@
 exec_prefix ?= @exec_prefix@
 
@@ -78,7 +80,7 @@ distclean: clean
 
 .depend: $(SRCS)
 	rm -f .depend
-	makedepend -f- -- $(CFLAGS) -- $(SRCS) > .depend
+	$(MAKEDEPEND) $(CFLAGS) $(SRCS) > .depend
 
 include .depend
 
