--- a/Makefile.in
+++ b/Makefile.in
@@ -18,11 +18,11 @@ exec_prefix ?= @exec_prefix@
 PROGS = add lookup gpgwww onak splitkeys onak-mail.pl stripkey
 CORE_OBJS = armor.o charfuncs.o decodekey.o getcgi.o hash.o \
 	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o sha1.o md5.o \
-	log.o photoid.o wordlist.o cleanup.o merge.o sendsync.o
+	log.o photoid.o wordlist.o cleanup.o merge.o sendsync.o keyarray.o
 SRCS = armor.c parsekey.c merge.c keyid.c md5.c sha1.c main.c getcgi.c mem.c \
 	keyindex.c stats.c lookup.c add.c keydb_$(DBTYPE).c ll.c hash.c \
 	gpgwww.c onak-conf.c charfuncs.c sendsync.c log.c photoid.c \
-	wordlist.c cleankey.c cleanup.c
+	wordlist.c cleankey.c cleanup.c keyarray.c
 
 ifeq (x@KEYD@, xyes)
 PROGS += keyd
