Add Suggests: for db4.2-utils to Debian packaging. As per Debian bug #317459 add a suggests for db4.2-utils.

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Package: onak
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: apache | httpd
+Suggests: db4.2-util
 Description: OpenPGP Key Server
  onak is an OpenPGP compatible keyserver which supports multiple subkeys,
  photo ids and path finding between keys. It can provide an HKP
