Fix replyto email address bug. If Reply-To wasn't set we wouldn't be able to send a reply email from onak-mail.pl for ADD/(V)INDEX mails. Fix this so we'll use Reply-To or From if that isn't set.

--- a/onak-mail.pl.in
+++ b/onak-mail.pl.in
@@ -257,7 +257,7 @@ while ($file = readdir(MAILDIR)) {
 			push @body, $_;
 		}
 	}
-	if (! defined($replyto)) {
+	if ($replyto eq '') {
 		$replyto = $from;
 	}
 	close(FILE);
