Change Debian package to use dynamic backend. This hopefully does all that's required to build a Debian package with all our backends but defaulting to db4 so we don't break those upgrading.

--- a/Makefile.in
+++ b/Makefile.in
@@ -101,6 +101,7 @@ onak-mail.pl: onak-mail.pl.in
 
 onak.conf: onak.conf.in
 	sed -e 's:@BINDIR@:@bindir@:g' \
+		-e 's:@LIBDIR@:@libdir@:g' \
 		-e 's:@STATEDIR@:@localstatedir@:g' \
 		< onak.conf.in > onak.conf
 
