--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=db4
+DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=dynamic
 
 DEB_MAKE_INSTALL_TARGET :=
 
