--- a/onak.conf.in
+++ b/onak.conf.in
@@ -3,6 +3,8 @@
 #
 
 pks_bin_dir @BINDIR@
+db_backend db4
+backends_dir @LIBDIR@/onak/backends
 db_dir @STATEDIR@/lib/onak
 logfile @STATEDIR@/log/onak.log
 # Loglevel : 0 is highest debug, default is 3, nothing is 7+
