Fix incoming mail spool directory onak-mail has spooled incoming mail for a long time; fix up the default config to put this in spool/onak rather than the hardcoded /community that was previously configured.

--- a/onak.conf.in
+++ b/onak.conf.in
@@ -30,7 +30,7 @@ mail_delivery_client /usr/sbin/sendmail -t -oi -fmailer-daemon
 maintainer_email PGP Key Server Administrator <pgp-keyserver-admin@the.earth.li>
 mail_intro_file /community/pgp-keyserver/share/mail_intro
 help_dir /community/pgp-keyserver/share
-mail_dir /community/pgp-keyserver/incoming
+mail_dir @STATEDIR@/spool/onak
 
 ### If you change this, make sure to put a corresponding help file in
 ### the help_dir named above
