Add Depends on adduser for Debian Add Depends on adduser for Debian; patch from Bastian Venthur as reported in Debian bug #408270

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.6.1
 
 Package: onak
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
 Recommends: apache | httpd
 Suggests: db4.2-util
 Description: OpenPGP Key Server
