--- a/debian/rules
+++ b/debian/rules
@@ -5,5 +5,4 @@ include /usr/share/cdbs/1/class/autotools.mk
 
 DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=dynamic
 
-# Woody doesn't like this of course
-#CFLAGS += -std=gnu99
+CFLAGS += -std=gnu99
