Fix bashism in Makefile distclean target
  We weren't correctly cleaning up config.{h,sub,guess} when /bin/sh
  wasn't bash and thus didn't support that style of expansion.

--- a/Makefile.in
+++ b/Makefile.in
@@ -141,7 +141,7 @@ ifeq (x@KEYD@, xyes)
 endif
 
 distclean: clean
-	$(RM) -f Makefile .depend config.{log,status,h}
+	$(RM) -f Makefile .depend config.log config.status config.h
 	$(RM) -r autom4te.cache
 
 .depend: $(SRCS)
