Add Homepage and Vcs-Bzr fields to Debian control file
  Point to the existing homepage and bzr repository.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Jonathan McDowell <noodles@earth.li>
 Uploaders: Ross Burton <ross@debian.org>
 Build-Depends: debhelper (>= 4.1.0), cdbs, libdb4.7-dev
 Standards-Version: 3.7.3.0
+Homepage: http://www.earth.li/projectpurple/progs/onak.html
+Vcs-Bzr: http://www.earth.li/~noodles/bzr/onak/mainline
 
 Package: onak
 Architecture: any
