--- a/onak.conf.in
+++ b/onak.conf.in
@@ -10,6 +10,9 @@ logfile @STATEDIR@/log/onak.log
 # Loglevel : 0 is highest debug, default is 3, nothing is 7+
 loglevel 3
 
+# Should we use the keyd backend?
+use_keyd false
+
 ### Set www_port to the port on which HTTP requests should be accepted.
 ### If you do not want to process HTTP requests, set this to 0.
 
